Sorted Files: - Shifted functions in separate Javascript for better visibility of the project and their functions

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link id="mainCss" rel="stylesheet" href="style.css">
 <script src="data.js"></script>
-<script src="elements.js"></script>
-<script src="script.js" defer></script>
+<script src="js/general.js"></script>
+<script src="js/mainpage.js" defer></script>
+<script src="js/module.js" defer></script>
+<script src="js/sheet.js" defer></script>
+<script src="js/elements.js"></script>
+<script src="js/script.js" defer></script>
 
 <style id="customStyle">
     /*	div {background-color: red;}	*/
