--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cairo&family=Chakra+Petch&family=Lato&family=Montserrat&family=Noto+Sans&family=Roboto&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cairo&family=Noto+Sans&family=Oranienbaum&family=Smooch+Sans:wght@300;400&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link id="mainCss" rel="stylesheet" href="style.css">
-<script src="data.js"></script>
-<script src="js/general.js"></script>
-<script src="js/mainpage.js" defer></script>
-<script src="js/module.js" defer></script>
-<script src="js/sheet.js" defer></script>
 <script src="js/elements.js"></script>
+<script src="js/general.js"></script>
+<script src="js/mainpage.js"></script>
+<script src="js/module.js"></script>
+<script src="js/sheet.js"></script>
+<script src="data.js"></script>
 <script src="js/script.js" defer></script>
 
 <style id="customStyle">
